--- a/resources/js/assets/base.css
+++ b/resources/js/assets/base.css
@@ -1,1 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');
+:root {
+    --vt-white: #ffffff;
+    --vt-white-soft: #f8f8f8;
+    --vt-white-mute: #f2f2f2;
+
+    --vt-black: #181818;
+    --vt-black-soft: #222222;
+    --vt-black-mute: #282828;
+
+
+    --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
+    --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
+    --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
+    --vt-c-divider-dark-2: rgba(84, 84, 84, 0.48);
+
+    --vt-c-text-light-1: var(--vt-c-indigo);
+    --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
+    --vt-c-text-dark-1: var(--vt-c-white);
+    --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
+
+    --sidebar-width: 300px;
+    --primary: #91f5b6;
+    --primary-hover: #4ade80;
+  }
+
+  *,
+  *::before,
+  *::after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-weight: normal;
+  }
